# vast-sim

./: CMakeLists.txt  README.md
data/: simulation_report.txt
include/: MiningTruck.h  Simulation.h  UnloadStation.h
src/: MiningTruck.cpp  Simulation.cpp  UnloadStation.cpp  main.cpp
tests/: MiningTruckTest.cpp  SimulationTest.cpp  UnloadStationTest.cpp
